--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 				<version>3.2.0</version>
 			</plugin>
 			<!--  
-			<plugin>
+			<plugina>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
